# 10-clientapps

./: cliff.toml  deny.toml
.github/workflows/: build.yml
hackernews/: Cargo.toml  Dioxus.toml  package-lock.json
hackernews/htmls/: comment.html  footer.html  index.html  main.html  send.html  story_item.html
hackernews/src/: api.rs  main.rs
hackernews/src/ui/: comments.rs  footer.rs  head.rs  mod.rs  send.rs  stories.rs  story_comment.rs  story_item.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  utils.rs
